# MockingBeacon

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  TODO.md  bsim-west2nix.toml  conn_beacon.py  dfu.conf  ext-adv.conf  flake.nix  prj-analyze.conf  prj-lowpower.conf  prj-nosmpsvr.conf  prj-smpsvr-lowpower.conf  prj-smpsvr.conf  prj-test.conf  prj.conf  west.yml  west2nix.toml
.github/workflows/: bsim-test.yml  ci.yml  release.yml
boards/: nrf54l15dk_nrf54l15_cpuapp.conf  nrf54l15dk_nrf54l15_cpuapp.overlay
boards/holyiot/holyiot_25055/: Kconfig.defconfig  Kconfig.holyiot_25055  board.cmake  board.yml  holyiot_25055-pinctrl.dtsi  holyiot_25055_common.dtsi  holyiot_25055_nrf54l05_cpuapp.dts  holyiot_25055_nrf54l05_cpuapp.yaml  holyiot_25055_nrf54l05_cpuapp_defconfig
docs/: airtag-comparison.md
docs/baselines/: README.md  config-nrf52810-1b.config  config-nrf52810-2.9.2  config-nrf52832dk-2.9.2  config-nrf54l15dk-2.9.2  nrfutil-status-2.9.2.md  signing-key-fingerprint-2.9.2.txt  symbols-nrf52810-1b.txt  symbols-nrf52810-2.9.2.txt
docs/plans/: 2026-04-16-ncs-3.2.4-research-appendix.md  2026-04-16-refactor-ext-adv-and-remaining-todos-plan.md  2026-04-16-refactor-ncs-3.2.4-upgrade-plan.md  2026-04-17-fhn-openhaystack-plan.md  2026-04-25-android-app-rewrite-plan.md
scripts/: west2nix.py
src/: accel_data.cpp  accel_data.hpp  beacon_config.cpp  beacon_config.hpp  beacon_logic.cpp  beacon_logic.hpp  beacon_nvs_ids.hpp  beacon_state.cpp  beacon_state.hpp  gatt_glue.c  ihardware.hpp  main.cpp  myboards.h  zephyr_hardware.cpp  zephyr_hardware.hpp  zephyr_nvs.cpp  zephyr_nvs.hpp
sysbuild/: mcuboot.conf
tests/ble_client/: test_conn_beacon.py  test_conn_beacon_integration.py  test_recycled_lifecycle.py
tests/bsim/: CMakeLists.txt  prj.conf  vmtest.nix
tests/bsim/src/: advertiser.c  beacon_logic_c_api.cpp  main.c  scanner.c
tests/bsim/test_scripts/: run.sh
tests/bsim_dfu/: CMakeLists.txt  prj.conf
tests/bsim_dfu/boards/: nrf52_bsim.overlay
tests/bsim_dfu/src/: main.c  smp_client.c  smp_server.c
tests/fuzz/: CMakeLists.txt  fuzz_auth.cpp  fuzz_key_chunk.cpp  fuzz_validate_field.cpp
tests/host/: CMakeLists.txt
tests/host/src/: test_main.cpp
tests/unit/: CMakeLists.txt  prj.conf  testcase.yaml
tests/unit/src/: main.cpp
tests/zms_persist/: CMakeLists.txt  prj.conf
tests/zms_persist/src/: main.c
